feat: adicionando show more em permissão
